--- a/style.css
+++ b/style.css
@@ -98,6 +98,46 @@ font-weight: 400;
     border-radius: 50%;
 }
 
+.portfolio{
+    height: 100vh;
+    text-align: center;
+    padding: 0 10% 0 10%;
+    
+    
+}
+
+.portfolio h2{
+    padding-top: 80px;
+    font-size: 50px;
+}
+
+.projects{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 90%;
+    
+    
+}
+
+.project{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 275px;
+    height: 350px;
+    background-color: whitesmoke;
+    border: 1px solid black;
+    border-radius: 15px;
+
+}
+
+.project img{
+    width: 200px;
+    border-radius: 50%;
+}
+
 @media only screen and (max-width: 1000px) {
 .main{
     flex-direction: column;
@@ -125,6 +165,7 @@ font-weight: 400;
 .about{
     flex-direction: column;
     justify-content: center;
+    margin-top: 25px;
 }
 
 .about-info{
@@ -146,5 +187,17 @@ font-weight: 400;
 .about-image img{
     width: 300px;
     margin-top: 30px;
+}
+
+.portfolio{
+    margin-top: 100px;
+    height: 150vh
+}
+
+.projects{
+    flex-direction: column;
+   transform: translateY(40px);
+    
+    
 }
 }
