--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ nav ul{
 nav a{
     text-decoration: none;
     color: white;
+    font-size: 20px;
 }
 
 .main{
@@ -109,7 +110,7 @@ font-weight: 400;
 }
 
 .portfolio{
-    height: 100vh;
+    height: 80vh;
     text-align: center;
     padding: 0 10% 0 10%;
     
@@ -125,7 +126,7 @@ font-weight: 400;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 90%;
+   height: 80%;
     
     
 }
@@ -151,6 +152,7 @@ font-weight: 400;
 
 .project img{
     width: 200px;
+    height: 200px;
     border-radius: 50%;
     border: 1px solid black;
     margin-top: 20px;
