--- a/style.css
+++ b/style.css
@@ -8,16 +8,18 @@ header{
     display: flex;
     padding: 0 10% 0 10%;
     height: 10vh;
-    
     justify-content: space-between;
     align-items: center;
     background-color: #212529;
     color: white;
+    border: none;
 }
 
 nav{
     width: 50%;
+    
 }
+
 
 nav ul{
     display: flex;
@@ -25,10 +27,35 @@ nav ul{
     justify-content: space-between;
 }
 
+nav ul.show{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100vw;
+    
+    z-index: 2;
+
+}
+
+
+
+
 nav a{
     text-decoration: none;
     color: white;
-    font-size: 20px;
+    font-size: 50px;
+}
+
+nav li{
+    transition: 0.3s ease;
+}
+
+nav li:hover{
+    transform: scale(115%);
+}
+
+.hamburger{
+display: none;
+    
 }
 
 .main{
@@ -127,7 +154,7 @@ font-weight: 400;
     justify-content: space-evenly;
     align-items: center;
    height: 80%;
-    
+   margin-bottom: 10%;
     
 }
 
@@ -172,6 +199,7 @@ footer{
     color: white;
     text-align: center;
     padding-top: 50px;
+    margin-top: 5%;
 }
 
 .contact{
@@ -185,7 +213,47 @@ footer{
 
 
 
+
+
+
+
 @media only screen and (max-width: 1000px) {
+
+header{
+    background-color: #4f5861;
+    padding: 0%;
+    display: block;
+}
+.hamburger{
+    display: block;
+    background-color: transparent;
+    border: transparent;
+    z-index: 3;
+    margin: 20px;
+    
+
+    
+}
+nav{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    width: 100vw;
+   
+    
+}
+
+
+    
+nav ul{
+    display: none;
+    background-color: #4f5861;
+ }
+
+.logo{
+    display: none;
+}
+
 .main{
     flex-direction: column;
 }
@@ -256,4 +324,6 @@ footer{
 .email{
     font-size: 150%;
 }
+
+
 }
