--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ nav ul.show{
     display: flex;
     flex-direction: column;
     width: 100vw;
-    
-    z-index: 2;
+   
+    z-index: 5;
 
 }
 
@@ -267,7 +267,43 @@ footer svg:hover{
     transform: translateY(-10px);
 }
 
+.reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 2s ease;
+}
 
+.reveal.active{
+    transform: translateY(0px);
+    opacity: 1;
+}
+
+.start{
+    position: relative;
+    transform: translateX(-150px);
+    opacity: 0;
+    transition: all 1.5s ease;
+}
+
+.start.active{
+    transform: translateX(0px);
+    opacity: 1;
+    z-index: 0;
+}
+
+.startReverse{
+    position: relative;
+    transform: translateY(-50px);
+    opacity: 0;
+    transition: all 1.5s ease;
+}
+
+.startReverse.active{
+    transform: translateY(0px);
+    opacity: 1;
+    z-index: 1;
+}
 
 
 
@@ -307,6 +343,7 @@ nav{
 nav ul{
     display: none;
     background-color: var(--primary);
+    border-bottom: 2px solid #0a1622;
  }
 
 nav ul li{
@@ -346,7 +383,7 @@ nav ul li{
     justify-content: center;
     margin-top: 50px;
     height: 100vh;
-    padding-top: ;
+    padding-top: 75px;
 }
 
 .about-info{
@@ -372,7 +409,8 @@ nav ul li{
 }
 
 .skills{
-    padding-top: 100px;
+    padding-top: 0;
+    transform: translateY(100px);
     
 }
 
@@ -395,7 +433,7 @@ nav ul li{
 }
 
 .portfolio h2{
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 }
 
 .projects{
